--- a/Lab. #1 - Deployment Automation/scripts/deployment.yaml
+++ b/Lab. #1 - Deployment Automation/scripts/deployment.yaml
@@ -30,7 +30,9 @@ kind: Service
 metadata:
   name: svc-mushop-demo
   annotations:
-    service.beta.kubernetes.io/oci-load-balancer-shape: 10Mbps
+    service.beta.kubernetes.io/oci-load-balancer-shape: "flexible"
+    service.beta.kubernetes.io/oci-load-balancer-shape-flex-min: "10"
+    service.beta.kubernetes.io/oci-load-balancer-shape-flex-max: "10"
 spec:
   selector:
     app: mushop-demo
